<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/forward_btn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:layout_toStartOf="@+id/forward_right_btn"
        android:text="@string/forward" />

    <Button
        android:id="@+id/forward_left_btn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/forward_btn"
        android:layout_toStartOf="@+id/forward_btn"
        android:text="@string/forward_10_left" />

    <Button
        android:id="@+id/forward_right_btn"
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_below="@+id/forward_btn"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@+id/reverse_btn"
        android:text="@string/forward_10_right" />

    <Button
        android:id="@+id/reverse_btn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/forward_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/reverse" />

    <Button
        android:id="@+id/up_btn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/forward_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/Up"
        android:textSize="16sp"
        app:backgroundTint="#DD0C0C" />

    <Button
        android:id="@+id/bottom_btn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/up_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Bottom"
        android:textSize="16sp"
        app:backgroundTint="#DD0C0C" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/connect_to_bluetooth_device"
        android:id="@+id/bluetooth_connect_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>